5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1573_1327.log
== SUBMITION (2019-03-11 15:06:53) 
-- CODE:
print(90-45=45)
-- EXECUTION TIME:
0.137705
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    print(90-45=45)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:07:05) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.15814
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:07:27) 
-- CODE:
print(90-55)
-- EXECUTION TIME:
0.190034
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
